# Task-tracker

./: .env  .env-dist  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  docker-compose-local-dev.yml  docker-compose-non-log.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  s.py  setup.cfg
api/: .env-dist  .env-prod  .gitignore  Dockerfile  pyproject.toml
api/docker/: app.sh
api/migrations/: env.py
api/migrations/versions/: 026b2ba40902_.py  080608804313_.py  0f0e4919f05f_.py  21bce6917f86_.py  31cb5ae0d33a_.py  66642bc11750_.py  7782ab0967e1_.py  8450eb23487e_.py  8ae5ab3e8ad8_.py  9338949fdaa3_.py  99cca025cc23_.py  c8416d4c2815_.py  cdc369cb5e36_.py  d1dc797c28e0_.py  d484ca80f52c_.py  e43c5e9fc331_.py  fa0b310cebb3_.py  fe6efc6ea19a_.py
api/src/: config.py  db_types.py  gql_types.py  graphql_schema.py  graphql_utils.py  headers.py  main.py  mutation.py  my_type_notation.py  query.py  scalars.py  utils.py
api/src/application/dtos/: base.py  group.py  user.py
api/src/application/usecases/auth/: andoroid_auth.py  change_pwd.py  cred_auth.py  refresh_access_token.py
api/src/application/usecases/group/: create.py  delete.py  read.py  update.py
api/src/application/usecases/organization/: create.py  delete.py  read.py  update.py
api/src/application/usecases/project/: create.py  delete.py  read.py  update.py
api/src/application/usecases/role/: create.py  delete.py  read.py  update.py
api/src/application/usecases/speech_task/: process_speech_task.py
api/src/application/usecases/task/: create.py  delete.py  read.py  update.py
api/src/application/usecases/user/: delete.py  read.py  register.py  update.py
api/src/application/utils/: auth_helpers.py  helpers.py  jwt_utils.py  reset_pwd_utils.py
api/src/auth/: auth_helpers.py  crud.py  custom_auth_router.py  google_auth.py  helpers.py  jwt_utils.py  models.py  reset_pwd_utils.py  schemas.py  task_read_schema.py  utils.py  validation.py
api/src/background/: consumer.py  producer.py
api/src/core/: utils.py
api/src/core/db/: database.py  utils.py
api/src/core/di/: container.py
api/src/core/di/providers/: db.py  nats_provider.py  redis_provider.py  repositories.py  services.py  settings.py  usecases.py
api/src/core/gunicorn/: logger.py
api/src/db/: database.py  logs.py  utils.py
api/src/domain/entities/: models.py
api/src/domain/entities/group/: models.py
api/src/domain/entities/organization/: models.py
api/src/domain/entities/project/: models.py
api/src/domain/entities/role/: models.py
api/src/domain/entities/task/: models.py
api/src/domain/entities/user/: models.py
api/src/domain/repositories/: base_repo.py  user_repo.py
api/src/domain/repositories/group/: repo.py
api/src/domain/repositories/organization/: repo.py
api/src/domain/repositories/project/: repo.py
api/src/domain/repositories/role/: repo.py
api/src/domain/repositories/task/: repo.py
api/src/domain/repositories/user/: repo.py
api/src/domain/services/: access_policy_interface.py  entity_service.py
api/src/domain/services/auth/: auth_service.py
api/src/domain/services/group/: group_interface.py  (+1 more)
api/src/entities/project/: models.py
api/src/entities/user/: models.py
api/src/google_auth/: andoroid_auth.py
api/src/gql/: gql_types.py  graphql_schema.py  graphql_utils.py  mutation.py  query.py
api/src/gql/auth/: mutation.py
api/src/gql/group/: query.py
api/src/gql/project/: mutation.py
api/src/infrastructure/repositories/: base_repository.py
api/src/infrastructure/services/: entity_service_impl.py
api/src/infrastructure/utils/: speech_task.py
api/src/integration/: get_project.py  get_task.py  git_parse.py  multiple_tasks.py
api/src/message_routing/: nats_utils.py
api/src/middlewares/: db.py
api/src/myredis/: utils.py
api/src/organization/: models.py
api/src/presentation/gql/: gql_types.py  graphql_schema.py  graphql_utils.py  scalars.py
api/src/presentation/routers/: custom_auth_router.py  router.py
api/src/project/: models.py
api/src/speech_task/: abstract_text_processing.py  recognition.py  router.py
api/src/task/: models.py
api/src/user_data/: router.py
api/tests/: conftest.py  handmade.py  s.py
api/tests/auth/: test_auth.py
backend/: .env  Dockerfile  README.md  pyproject.toml
backend/docker/: app.sh
backend/migrations/: env.py
backend/migrations/versions/: 7782ab0967e1_.py
backend/src/: config.py  database.py  gql_types.py  graphql_schema.py  loader.py  main.py  mutation.py  query.py  scalars.py  utils.py
backend/src/auth/: custom_auth_router.py  manager.py  models.py  schemas.py  task_read_schema.py
backend/src/integration/: get_project.py  get_task.py  git_parse.py  multiple_tasks.py
backend/src/organization/: models.py  schemas.py
backend/src/project/: models.py  schemas.py
backend/src/speech_task/: abstract_text_processing.py  recognition.py
backend/src/task/: group_schemas.py  models.py  schemas.py
backend/src/user_data/: router.py
notification/: .env  .env-dist  .env-prod  Dockerfile  app.py  config.py  email_notification.py  pyproject.toml
tg-bot/: .env  .env-non-dev  app.py  pyproject.toml
tg-bot/src/: app.py  redis_config.py  utils.py
tg-bot/src/handlers/: auth.py
tg-bot/src/kbds/: reply.py
(+111 files in other folders)
