[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["CoSm1C AvEnGeR <zhora.zhilin.06@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.1"}
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asana = "^5.0.6"
httpx-oauth = "^0.14.0"
starlette-exporter = "^0.21.0"
slugify = "^0.0.1"
pillow = "^10.3.0"
requests = "^2.31.0"
bs4 = "^0.0.2"
python-dotenv = "^1.0.1"
strawberry-graphql = "^0.224.1"
pendulum = "^3.0.0"
gunicorn = "^21.2.0"
redis = "^5.0.3"
aiokafka = "^0.10.0"
python-multipart = "^0.0.9"
groq = "^0.8.0"
pyjwt = "^2.8.0"
ffmpeg-python = "^0.2.0"
pydub = "^0.25.1"
aiodataloader = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
